--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
             <div class="buttons" style="margin: 0 0.5rem">
-                <button id="open-sidebar" aria-label="menu"> <i class="fa-solid fa-bars fa-2x"></i></button>
+                <button id="open-sidebar" aria-label="menu"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></button>
             </div>
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
