--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <img src="./imgs/pexels-rodnae-productions-7821482.jpg" width="640" height="427" loading="lazy" alt="back of credit card">
                         </picture>
                         <h3>Platinum Card</h3>
-                        <p>This credit card is for well established clients, with an excellent credit score and payment history</p>
+                        <p>This credit card is for well established clients and offers unlimited credit.</p>
                     </article>
                     <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
                 </figure>
@@ -146,11 +146,35 @@
                 <figure class="creditcard">
                     <article>
                         <picture class="image">
-                            <source srcset="./imgs/pexels-rodnae-productions-7821685.avif" type="image/avif">
-                            <img src="./imgs/pexels-rodnae-productions-7821685 (1).jpg" width="640" height="427" loading="lazy" alt="paperwork">
+                            <source srcset="./imgs/markus-winkler-DJoG5GsXfMw-unsplash.avif" type="image/avif">
+                            <img src="./imgs/markus-winkler-DJoG5GsXfMw-unsplash.jpg" width="640" height="427" loading="lazy" alt="paperwork">
                         </picture>
                         <h3>Business Card</h3>
                         <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
+                    </article>
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                </figure>
+                <!--END OF FOURTH CREDIT CARD-->
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/dmitry-demidko-z4VuRg-ZOEg-unsplash.avif" type="image/avif">
+                            <img src="./imgs/dmitry-demidko-z4VuRg-ZOEg-unsplash.jpg" width="640" height="427" loading="lazy" alt="bitcoin card">
+                        </picture>
+                        <h3>Bit Coin Card</h3>
+                        <p>This card is used as a digital wallet, to store your crypto currencies, in a secure way.</p>
+                    </article>
+                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                </figure>
+                <!--END OF FIFTH CREDIT CARD-->
+                <figure class="creditcard">
+                    <article>
+                        <picture class="image">
+                            <source srcset="./imgs/markus-winkler-ahjzVINkuCs-unsplash.avif" type="image/avif">
+                            <img src="./imgs/markus-winkler-ahjzVINkuCs-unsplash.jpg" width="640" height="427" loading="lazy" alt="black credit card">
+                        </picture>
+                        <h3>Rewards Card</h3>
+                        <p>This credit card applies points, with every eligible purchase, at participating stores. </p>
                     </article>
                     <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
                 </figure>
@@ -178,9 +202,9 @@
                         <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
                         <li><a href="https://www.pexels.com/photo/black-card-on-top-of-white-envelope-7821482/">RODNAE productions</a></li>
                         <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
-                        <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
-                        <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>
-                       
+                        <li><a href="https://unsplash.com/photos/DJoG5GsXfMw">Marcus Winkler</a></li>
+                        <li><a href="https://unsplash.com/photos/z4VuRg-ZOEg">Dmitry Demidko</a></li>
+                        <li><a href="https://unsplash.com/photos/ahjzVINkuCs">Marcus Winkler</a></li>
                     </ul>
                 </article>
                 <article class="footer-column">
