--- a/signin.html
+++ b/signin.html
@@ -80,7 +80,7 @@
         <footer id="footer" aria-label="footer">
             <section id="footer-main">
                 <article class="footer-column">
-                    <h3 class="footer-title">Photo Credit</h3>
+                    <h3 class="footer-title">Permalinks</h3>
                     <ul>
                         <li><a href="index.html#about">About</a></li>
                        <li><a href="index.html#benefits">Benefits</a></li>
@@ -91,13 +91,14 @@
                     </ul>
                 </article>
                 <article class="footer-column">
-                    <h3 class="footer-title">Permalinks</h3>
+                    <h3 class="footer-title">Photo Credit</h3>
                     <ul>
                         <li><a href="https://www.pexels.com/photo/black-smartphone-on-green-table-6214382/">Nataliya Vaitkevich</a></li>
                        <li><a href="https://www.pexels.com/photo/roll-of-american-dollar-banknotes-tightened-with-band-4386476/">Karolina Grabowska</a></li>
                        <li><a href="https://www.pexels.com/photo/close-up-of-coins-on-table-332304/">Skitterphoto</a></li>
-                       <li><a href="https://www.pexels.com/photo/green-card-beside-a-document-7821679/">RODNAE Productions</a></li>
-                       <li><a href="https://www.pexels.com/photo/gray-calculator-and-black-magnifying-glass-on-brown-wooden-surface-7821685/">RODNAE Productions</a></li>   
+                       <li><a href="https://unsplash.com/photos/DJoG5GsXfMw">Marcus Winkler</a></li>
+                       <li><a href="https://unsplash.com/photos/z4VuRg-ZOEg">Dmitry Demidko</a></li>
+                       <li><a href="https://unsplash.com/photos/ahjzVINkuCs">Marcus Winkler</a></li>
                     </ul>
                 </article>
                 <article class="footer-column">
