--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                   <li><a href="index.html">About</a></li>
                   <li><a href="index.html#benefits">Benefits</a></li>
                   <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                  <li><a href="index.html#apply.html">Apply Now</a></li>
+                  <li><a href="apply.html">Apply Now</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="signin.html">Sign In</a></li>
                 </ul>
@@ -56,7 +56,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="index.html#benefits">Benefits</a></li>
                     <li><a href="index.html#credit_cards">Credit Cards</a></li>
-                    <li><a href="index.html#apply.html">Apply Now</a></li>
+                    <li><a href="apply.html">Apply Now</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="signin.html">Sign In</a></li>
                 </ul>
