--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <i class="fa-solid fa-credit-card fa-2x"></i>
                     <h3>Security</h3>
                         <p>Fraud Alerts <i class="fa-solid fa-check"></i></p>
-                        <p>Lock Card<i class="fa-solid fa-check"></i> </p>
+                        <p>Lock Card <i class="fa-solid fa-check"></i> </p>
                         <p>Global Hotline <i class="fa-solid fa-check"></i></p>
                         <p>Card Replacement <i class="fa-solid fa-check"></i></p>
                 </article>
@@ -116,7 +116,9 @@
                         <h3>Platinum Card</h3>
                         <p>This credit card is for well established clients and offers unlimited credit.</p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption>
                 </figure>
                 <!--END OF FIRST CREDIT CARD-->
                 <figure class="creditcard">
@@ -128,7 +130,9 @@
                         <h3>Cash Card</h3>
                         <p>Every penny counts and with this card, each eligible purchase receives 5% cash back.</p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption>
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption>
                 </figure>
                 <!--END OF SECOND CREDIT CARD-->
                 <figure class="creditcard">
@@ -140,7 +144,9 @@
                         <h3>Personal Card</h3>
                         <p>This is a credit card, that is open to students and anyone who wants to establish credit.</p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption> 
                 </figure>
                 <!--END OF THIRD CREDIT CARD-->
                 <figure class="creditcard">
@@ -152,7 +158,9 @@
                         <h3>Business Card</h3>
                         <p>This credit card is meant for businesses, both small and large. Excellent rates are available.</p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption> 
                 </figure>
                 <!--END OF FOURTH CREDIT CARD-->
                 <figure class="creditcard">
@@ -164,7 +172,9 @@
                         <h3>Bit Coin Card</h3>
                         <p>This card is used as a digital wallet, to store your crypto currencies, in a secure way.</p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption> 
                 </figure>
                 <!--END OF FIFTH CREDIT CARD-->
                 <figure class="creditcard">
@@ -176,7 +186,9 @@
                         <h3>Rewards Card</h3>
                         <p>This credit card applies points, with every eligible purchase, at participating stores. </p>
                     </article>
-                    <figcaption><a href="apply.html" class="btn">apply now <i class="fa-solid fa-angle-right"></i></a></figcaption> 
+                    <figcaption>
+                        <a href="apply.html" class="btn">apply now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+                    </figcaption> 
                 </figure>
                 <!--END OF FINAL CREDIT CARD-->
             </div>
