--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,6 @@
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="styles.css">
     
-    <!--GOOGLE FONTS-->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
-    </style>
-
-    <!--FONTAWESOME ICONS-->
-    <script defer src="https://kit.fontawesome.com/4a00a82b9f.js" crossorigin="anonymous"></script>
-    
     <!--BENTO SIDEBAR SCRIPT-->
     <script defer type="module" src="https://cdn.ampproject.org/bento.mjs" crossorigin="anonymous"></script>
     <script defer nomodule src="https://cdn.ampproject.org/bento.js" crossorigin="anonymous"></script>
@@ -85,18 +77,18 @@
                 </form>
                 <!--END OF FORM SECTION-->
                 <aside aria-label="aside">
-                    <h3>Contact information</h3>
-                    <p>how can we help?</p>
+                    <h3>Contact Information</h3>
+                    <p>How can we help?</p>
                     <div class="info">
                         <article aria-label="article">
-                            <i class="fa-solid fa-envelope fa-2x"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             <div class="details">
                                 <h4>Email</h4>
                                 <p>info@logo.com</p>
                             </div>
                         </article>
                         <article aria-label="article">
-                            <i class="fa-solid fa-location-dot fa-2x"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
                             <div class="details">
                                 <h4>Location</h4>
                                 <p>748 Grove Street</p>
@@ -104,7 +96,7 @@
                             </div>
                         </article>
                         <article aria-label="article">
-                            <i class="fa-solid fa-phone fa-2x"></i>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
                             <div class="details">
                                 <h4>Telephone</h4>
                                 <p>Weekdays 8am-5pm</p>
@@ -126,7 +118,7 @@
                        <li><a href="index.html#credit_cards">Credit Cards</a></li>
                        <li><a href="apply.html">Apply Now</a></li>
                        <li><a href="contact.html">Contact</a></li>
-                       <li><a href="signin.html">Sign In <i class="fa-solid fa-circle-user fa-lg"></i></a></a></li>
+                       <li><a href="signin.html">Sign In</a></li>
                     </ul>
                 </article>
                 <article class="footer-column">
@@ -161,12 +153,12 @@
             <!--END OF FOOTER MAIN SECTION-->
             <section id="footer-socials" aria-label="social media">
                 <ul class="footer-icons">
-                    <li><a href="#" aria-label="facebook"><i class="fa-brands fa-facebook fa-lg"></i></a></li>
-                    <li><a href="#" aria-label="twitter"><i class="fa-brands fa-twitter fa-lg"></i></a></li>
-                    <li><a href="#" aria-label="instagram"><i class="fa-brands fa-instagram fa-lg"></i></a></li>
-                    <li><a href="#" aria-label="github"><i class="fa-brands fa-github fa-lg"></i></a></li>
-                    <li><a href="#" aria-label="linkedin"><i class="fa-brands fa-linkedin fa-lg"></i></a></li>
-                    <li><a href="#" aria-label="youtube"><i class="fa-brands fa-youtube fa-lg"></i></a></li>
+                    <li><a href="#" aria-label="facebook"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a></li>
+                    <li><a href="#" aria-label="twitter"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></li>
+                    <li><a href="#" aria-label="instagram"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a></li>
+                    <li><a href="#" aria-label="github"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a></li>
+                    <li><a href="#" aria-label="linkedin"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></li>
+                    <li><a href="#" aria-label="youtube"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg></a></li>
                 </ul>
             </section>
             <!--END OF SOCIAL MEDIA SECTION-->
