--- a/apply.html
+++ b/apply.html
@@ -153,7 +153,7 @@
                     <ul class="footer-legal-items">
                        <li><a href="#">Terms &amp; Conditions</a></li>
                        <li><a href="#">Privacy Policy</a></li>
-                       <li>&copy; Copyright 2022 Logo</li>
+                       <li>Made by <a href="https://cgathua.pages.dev/" target="_blank">@cgathua</a></li>
                     </ul>
                 </small>
             </section>
