--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!--END OF DESKTOP NAV-->   
         </header>
         <!--END OF HEADER-->
-        <section id="about" style="background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382 (1).avif');" aria-label="about">
+        <section id="about">
             <div class="container">
                 <article class="about-article">
                     <h1>Credit Card Provider</h1>
